--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -16,4 +16,54 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+<!--    Texts    -->
+
+    <style name="AppTextBody">
+        <item name="android:fontFamily">@font/roboto_condensed_light</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppTextTitle">
+        <item name="android:fontFamily">@font/roboto_condensed_bold</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:layout_marginTop">@dimen/large_margin</item>
+    </style>
+
+    <style name="AppTextSubTitle" parent="AppTextBody">
+        <item name="android:layout_marginTop">@dimen/small_margin</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="AppTextLabel" parent="AppTextBody">
+        <item name="android:layout_marginStart">@dimen/large_margin</item>
+        <item name="android:layout_marginEnd">@dimen/default_margin</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
+
+    <style name="AppTextInput" parent="AppTextBody">
+        <item name="android:layout_marginStart">@dimen/default_margin</item>
+        <item name="android:layout_marginTop">@dimen/default_margin</item>
+        <item name="android:layout_marginEnd">@dimen/default_margin</item>
+        <item name="android:ems">10</item>
+    </style>
+
+<!--    Buttons    -->
+
+    <style name="AppButton">
+        <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/roboto_condensed_bold</item>
+        <item name="android:layout_marginStart">@dimen/default_margin</item>
+        <item name="android:layout_marginTop">@dimen/xlarge_margin</item>
+        <item name="android:layout_marginEnd">@dimen/default_margin</item>
+    </style>
+
+    <style name="AppFAB">
+        <item name="android:layout_marginEnd">@dimen/large_margin</item>
+        <item name="android:layout_marginBottom">@dimen/large_margin</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+
 </resources>
