--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -1,87 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/fragment_margin"
-    tools:context=".screens.login.LoginFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/vertical_guideline_begin" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/fragment_margin"
+        tools:context=".screens.login.LoginFragment">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/horizontal_guideline_begin" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/vertical_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/vertical_guideline_begin" />
 
-    <TextView
-        android:id="@+id/username_tv"
-        style="@style/AppTextLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/username"
-        app:layout_constraintBaseline_toBaselineOf="@+id/username_et"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/horizontal_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="@dimen/horizontal_guideline_begin" />
 
-    <EditText
-        android:id="@+id/username_et"
-        style="@style/AppTextInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
-        tools:text="myName" />
+        <TextView
+            android:id="@+id/username_tv"
+            style="@style/AppTextLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/username"
+            app:layout_constraintBaseline_toBaselineOf="@+id/username_et"
+            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/password_tv"
-        style="@style/AppTextLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/password"
-        app:layout_constraintBaseline_toBaselineOf="@+id/password_et"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:id="@+id/username_et"
+            style="@style/AppTextInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
+            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
+            tools:text="myName" />
 
-    <EditText
-        android:id="@+id/password_et"
-        style="@style/AppTextInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/username_et"
-        tools:text="password" />
+        <TextView
+            android:id="@+id/password_tv"
+            style="@style/AppTextLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/password"
+            app:layout_constraintBaseline_toBaselineOf="@+id/password_et"
+            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/signup_btn"
-        style="@style/AppButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/signup"
-        app:layout_constraintBaseline_toBaselineOf="@+id/login_btn"
-        app:layout_constraintEnd_toStartOf="@+id/login_btn"
-        app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:id="@+id/password_et"
+            style="@style/AppTextInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/username_et"
+            tools:text="password" />
 
-    <Button
-        android:id="@+id/login_btn"
-        style="@style/AppButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signup_btn"
-        app:layout_constraintTop_toBottomOf="@+id/password_et" />
+        <Button
+            android:id="@+id/signup_btn"
+            style="@style/AppButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/signup"
+            app:layout_constraintBaseline_toBaselineOf="@+id/login_btn"
+            app:layout_constraintEnd_toStartOf="@+id/login_btn"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/login_btn"
+            style="@style/AppButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/signup_btn"
+            app:layout_constraintTop_toBottomOf="@+id/password_et" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
