--- a/starter/app/src/main/res/layout/fragment_shoelist.xml
+++ b/starter/app/src/main/res/layout/fragment_shoelist.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.listing.ListingFragment">
+        tools:context=".screens.shoelist.ShoeListFragment">
 
         <ScrollView
             android:id="@+id/listing_scrollview"
