--- a/starter/app/src/main/res/navigation/navigation.xml
+++ b/starter/app/src/main/res/navigation/navigation.xml
@@ -30,15 +30,15 @@
         tools:layout="@layout/fragment_instructions">
         <action
             android:id="@+id/action_instructionsFragment_to_listingFragment"
-            app:destination="@id/listingFragment"
+            app:destination="@id/shoeListFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/listingFragment"
-        android:name="com.udacity.shoestore.screens.listing.ListingFragment"
+        android:id="@+id/shoeListFragment"
+        android:name="com.udacity.shoestore.screens.shoelist.ShoeListFragment"
         android:label="@string/browse"
-        tools:layout="@layout/fragment_listing" >
+        tools:layout="@layout/fragment_shoelist" >
         <action
             android:id="@+id/action_listingFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
@@ -53,6 +53,6 @@
         tools:layout="@layout/fragment_details" >
         <action
             android:id="@+id/action_detailsFragment_to_listingFragment"
-            app:destination="@id/listingFragment" />
+            app:destination="@id/shoeListFragment" />
     </fragment>
 </navigation>
