--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#795548</color>
     <color name="colorPrimaryDark">#5D4037</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="colorAccentLight">#FFECB3</color>
 </resources>
